Make cursor pointer when hovering tool bar
Make cursor pointer when hovering tool bar.

--- a/index.html
+++ b/index.html
@@ -27,9 +27,21 @@
         <header>
             <h1>친구</h1>
             <ul>
-                <li class="search">search</li>
-                <li class="user-blank">add friend</li>
-                <li class="settings">settings</li>
+                <li>
+                    <a href="" class="search">
+                        search
+                    </a>
+                </li>
+                <li>
+                    <a href="" class="user-blank">
+                        add friend
+                    </a>
+                </li>
+                <li>
+                    <a href="" class="settings">
+                        settings
+                    </a>
+                </li>
             </ul>
         </header>
         <article>
